--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,8 +44,9 @@ toad = "toad.cli:main"
 exclude = ["tests"]
 
 [tool.cibuildwheel]
-skip = ["pp*", "*-manylinux_i686"]
+skip = ["pp*", "*-manylinux_i686", "*-musllinux_*"]
 before-all = "uname -a"
+before-build = "python setup.py build_ext --inplace"
 
 [project.urls]
 Homepage = "https://github.com/amphibian-dev/toad"
