--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,9 @@
 name: Build and upload to PyPI
 
 on:
-  workflow_dispatch:
-  pull_request:
-  push:
-  release:
-    types:
-      - published
+  workflow_run:
+    workflows: ["Test"]
+    types: [requested]
 
 jobs:
   build_wheels:
@@ -48,9 +45,7 @@ jobs:
     environment: pypi
     permissions:
       id-token: write
-    if: github.event_name == 'release' && github.event.action == 'published'
-    # or, alternatively, upload to PyPI on every tag starting with 'v' (remove on: release above to use this)
-    # if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+    if: ${{ startsWith(github.ref, 'refs/tags') || github.ref == 'refs/heads/release' }}
     steps:
       - uses: actions/download-artifact@master
         with:
@@ -62,3 +57,5 @@ jobs:
       - uses: pypa/gh-action-pypi-publish@release/v1
         with:
           repository-url: https://test.pypi.org/legacy/
+          skip-existing: true
+          verbose: true
