--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dynamic = [
 ]
 
 [tool.setuptools.dynamic]
+version = {attr = "toad.__version__"}
 readme = {file = ["README.md"], content-type = "text/markdown"}
 dependencies = {file = ["requirements.txt"]}
 optional-dependencies = {nn = {file = ["requirements-nn.txt"]}, tools = {file = ["requirements-tools.txt"]}, all = {file = ["requirements-nn.txt", "requirements-tools.txt"]} }
@@ -32,13 +33,11 @@ requires = [
     "setuptools",
     "Cython >= 0.29.15",
     "numpy >= 1.20",
+    "pandas >= 1.5",
     "wheel",
     "twine",
 ]
 build-backend = "setuptools.build_meta"
-
-[console_scripts]
-toad = "toad.cli:main"
 
 [tool.setuptools.packages.find]
 exclude = ["tests"]
